--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "bcryptjs": "^3.0.3",
     "framer-motion": "^12.23.25",
     "jose": "^6.1.3",
-    "next": "16.0.6",
+    "next": "^16.0.7",
     "next-intl": "^4.5.8",
     "prisma": "5.22.0",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^19.2.1",
+    "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
