修复docker映射端口未读取配置文件

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -26,10 +26,12 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
+      args:
+        PORT: ${PORT:-3000}
     container_name: ptype_web
     restart: unless-stopped
     ports:
-      - "${PORT:-3000}:3000"
+      - "${PORT:-3000}:${PORT:-3000}"
     env_file:
       - .env
     environment:
