--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^19.2.1",
     "react-dom": "^19.2.1",
     "recharts": "^3.5.1",
+    "socket.io": "^4.8.3",
+    "socket.io-client": "^4.8.3",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
